--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="slide-wrapper">
+        <ul class="slide">
+            <li><img src="img/foto1.jpg" alt=""></li>
+            <li><img src="img/foto2.jpg" alt=""></li>
+            <li><img src="img/foto3.jpg" alt=""></li>
+            <li><img src="img/foto4.jpg" alt=""></li>
+            <li><img src="img/foto5.jpg" alt=""></li>
+            <li><img src="img/foto6.jpg" alt=""></li>
+        </ul>
+    </div>
     <script type="module" src="js/script.js"></script>
 </body>
 </html>
